--- a/phase1/css/style.css
+++ b/phase1/css/style.css
@@ -1,7 +1,13 @@
+.grandstander-title {
+    font-family: "Grandstander", cursive;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+  }
 
 .navbar
 {
-    background:linear-gradient(teal, purple);
+    background-color:var(--slate970);
     display:flex;
     flex-direction: row;
     justify-content: space-between;
@@ -13,7 +19,6 @@
 }
 .cards-container
 {
-    border: 1px solid var(--slate500);
     background-color:var(--slate1000);
     display:grid;
     grid-template-columns: repeat(3, 1fr);
@@ -23,74 +28,129 @@
 }
 .title
 {
-    font-size:2rem;
+    font-family: "Grandstander", cursive;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-size:2rem; 
+}
+.middle{
+
 }
 .cards:hover
 {
     transform:scale(1.05);
-    background-color:var(--slate1100);   
+    background-color:var(--slate1000);   
 }
 .cards
 {
-    border:1px solid var(--slate500);
     padding:10px;
     transition: transform 0.2s ease;
+    border-bottom:5px solid var(--slate1100);
 }
 
 /*   DOWN BELOW FOR THE USER_PROFILE   */
-.profile-container
-{
-    padding:10px;
-    margin:0px 30px 20px 30px;
-    color:var(--slate100);
-    background-color:var(--slate1000);
-    display:flex;
-    flex-direction:row;
-}
-
-.profile-img
-{
-    width:500px;
-    height:500px;
-}
-
-.profile-left{
-    border:1px solid var(--slate100);
-}
-
-.profile-right{
-    border:1px solid var(--slate100);
-    padding:20px;
-}
 
 .profile-container2{
-    margin:0px 30px 20px 30px;
+    margin:50px 30px 0px 30px;
     display:flex;
-}
-
-
-
-.comments-container{
-    padding:10px;
-    flex: 0 0 40%;
-    border: 3px solid var(--slate1000);
-}
-
-.comments{
-    border: 2px solid var(--slate1000);
-}
-
-
-.profile-post-container{
-    flex-grow:1;
-    border: 3px solid var(--slate1000);
-    background-color:var(--slate200);
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
     gap:20px;
+}
+
+.profile-bar{
+    background-color: var(--slate970);
+    height:50px;
     padding:20px;
+    box-sizing: border-box;
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    
+}
+.profile-circle-holder{
+    border-radius:50%;
+    background-color: aliceblue;
+    border-color: var(--slate800);
+    border-width: 2px;
+    border-style:double;
+    display:inline-block;
+    width:120px;
+    height:120px;
+    position:relative;
+    bottom:20px;
+    background-image: url(fur.jpg);
+    background-size:cover;
+}
+.navbar-img{
+    background-image: url("1335810.png");
+    background-size:cover;
+}
+.profile-username{
+    position:relative;
+    font-weight: 700;
+}
+.profile-post-container{
+    display:flex;
+    flex-direction: column;
+    background-color:var(--slate970);
+    border-radius:8px;
 
 }
+.comments-container{
+    flex: 0 0 40%;
+    border-radius:8px;
+    background-color:var(--slate970);
+    display:flex;
+    flex-direction:column;
+}
+.comment-container{
+    border-bottom: 5px solid var(--slate1100);
+    display:flex;
+    flex-direction: column;
+    width:100%;
+    height:auto;
+}
+.profile-details-container{
+    position:relative;
+    bottom:65px;
+    left: 140px;
+    display:flex;
+    flex-direction: column;
+    gap:5px;
+}
+.profile-edit{
+    width:70px;
+}
+
+.description-container{
+    background-color:var(--slate970);
+    border-radius:15px;
+    border:2px solid var(--slate100);
+    padding:20px;
+    text-align:center;
+    height:100px;
+    width:200px;
+    position: relative;
+    bottom:60px;
+}
+
+.description{
+
+}
+.profile-edit{
+    position:relative;
+}
+
+.profile-post-header
+{
+    padding:10px;
+    transition: transform 0.2s ease;
+    border-bottom:5px solid var(--slate1100);
+}
+
+
+
 
 
 /*Below are the post-container*/
