--- a/phase1/css/style.css
+++ b/phase1/css/style.css
@@ -1,9 +1,6 @@
-.grandstander-title {
-    font-family: "Grandstander", cursive;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100..900&display=swap');
+
+
 
 .navbar
 {
@@ -28,7 +25,7 @@
 }
 .title
 {
-    font-family: "Grandstander", cursive;
+    font-family: "Big Shoulders Text", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
@@ -126,16 +123,17 @@
 .description-container{
     background-color:var(--slate970);
     border-radius:15px;
-    border:2px solid var(--slate100);
-    padding:20px;
-    text-align:center;
-    height:100px;
+    border:1px solid var(--slate100);
+    text-align:left;
     width:200px;
+    min-height:200px;
+    max-height:200px;
+    overflow:hidden;
     position: relative;
-    bottom:60px;
+    bottom:50px;
 }
 
-.description{
+.profile-description{
 
 }
 .profile-edit{
@@ -148,6 +146,9 @@
     transition: transform 0.2s ease;
     border-bottom:5px solid var(--slate1100);
 }
+
+/* For Editing the user Profile*/
+
 
 
 
@@ -164,9 +165,37 @@
     text-align:center;
 }
 
+.Update-form-container{
+    padding:20px;
+    margin:0px 500px 0px 500px;
+    background-color: var(--slate100);
+    color:var(--slate1000);
+}
+.Update-form{
+    display:flex;
+    flex-direction: column;
+    gap:20px;
+    justify-content: start;
 
+}
+.Update-form .input-box input{
+    width:100%;
+}
+.Update-form .input-box button{
+    width:100%;
+}
+.form-label{
+    background-color: var(--slate1000);
+}
 
-
+input::file-selector-button{
+    color:var(--slate100);
+    background-color: var(--slate1000);
+    border: none;
+}
+.form-profile-description{
+    height:200px;
+}
 
 /* for creating posts */
 
