--- a/phase1/css/page_layout.css
+++ b/phase1/css/page_layout.css
@@ -28,10 +28,8 @@
 
 body
 {
-
     font-family: "Source Sans 3", sans-serif;
     min-height: 100vh;
-
     padding:0px;
     margin:0px;
     background-color:var(--slate1100);
@@ -71,4 +69,10 @@ a{
 a:hover{
     color: var(--slate100);
     text-decoration:none;
+}
+select{
+
+}
+textarea{
+    height:20px;
 }
