--- a/phase1/css/style.css
+++ b/phase1/css/style.css
@@ -11,7 +11,7 @@
     } 
 }
 .blur{
-    animation: blur 1s ease;
+    animation: blur 0.6s ease;
 }
 
 
@@ -26,7 +26,7 @@
     } 
 }
 .blur-left{
-    animation: blur-left 1s ease;
+    animation: blur-left 0.6s ease;
 }
 
 @keyframes blur-right{
@@ -40,9 +40,21 @@
     } 
 }
 .blur-right{
-    animation: blur-right 1s ease;
+    animation: blur-right 0.6s ease;
 }
-
+@keyframes blur-bottom{
+    from{
+        transform: translateY(50px);
+        opacity:0;
+    }
+    to{
+        transform: translateY(0px);
+        opacity:1;
+    } 
+}
+.blur-bottom{
+    animation: blur-bottom 0.6s ease;
+}
 
 .navbar
 {
@@ -183,11 +195,13 @@
     flex-direction:column;
 }
 .comment-container{
+    padding:20px;   
     border-bottom: 5px solid var(--slate1100);
     display:flex;
     flex-direction: column;
     width:100%;
     height:auto;
+    box-sizing:border-box;
 }
 .profile-details-container{
     position:relative;
@@ -319,6 +333,7 @@ input::file-selector-button{
     margin:0px 500px 0px 500px;
     background-color: var(--slate100);
     color:var(--slate1000);
+
 }
 .login-form{
     display:flex;
