--- a/phase1/css/page_layout.css
+++ b/phase1/css/page_layout.css
@@ -17,7 +17,7 @@
 --slate1100: #11162B;/*  used for bodybackground  */
 --highlight1: #f792f3;
 --highlight2: #97F1F2;
---buttom-hover-bg: #556DE5;
+--button-hover-bg: #556DE5;
 --button-text: #556DE5; /*used for button text */
 --button-bg: #1A224D; /*used for buttonbg */
 }
