Added dummy data
gemshin

--- a/phase1/style.css
+++ b/phase1/style.css
@@ -686,3 +686,8 @@ p.draftReplyComment{
 .deleteCommentButton:hover{
     background-color: #661b1b;
 }
+
+h1.main-post-title{
+    color: white;
+    font-size: 3rem;
+}
