--- a/phase1/css/page_layout.css
+++ b/phase1/css/page_layout.css
@@ -87,7 +87,7 @@ input[type="button"]{
 }
 input[type="button"]:hover{
     color: var(--slate100) !important;
-    background-color: var(--buttom-hover-bg);
+    background-color: var(--button-hover-bg);
     transform:translate(5px,-2px);
     cursor:pointer;
 }
