--- a/Phase2/views/post_page.hbs
+++ b/Phase2/views/post_page.hbs
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <div class="main-post-container">
-        <div class="post">
+        <div class="post" data-post-id="{{postdetails._id}}">
             <h1 class="main-post-title">{{postdetails.p_title}}</h1>
             <div class="authorContainer">
                 <img class="pfp" src="https://via.placeholder.com/300x150"> 
@@ -21,10 +21,20 @@
                 <div class="tag">{{postdetails.p_tags}}</div>
             </div>
             <br>
-            <i class="fa-solid fa-thumbs-up"></i>
-            <span> 123123</span>
-            <i class="fa-solid fa-thumbs-down"></i>
-            <span> 123123</span>
+
+
+            <i class="fa-solid fa-thumbs-up upvote-icon"></i>
+            <span class="downvote-count">{{postdetails.upvotes}}</span>
+            <i class="fa-solid fa-thumbs-down downvote-icon"></i>
+            <span class="upvote-count">{{postdetails.downvotes}}</span>
+
+
+
+
+
+
+
+
         </div>
         <div class="comments-container">
             <h2>Comments</h2>
@@ -119,3 +129,4 @@
     </div>
 
     <script src="/common/modal.js"></script>
+    <script src="/common/post_page.js"></script>
